# wstgui

./: .gitmodules  CMakeLists.txt  flake.nix  gui_manager.cpp  wstgui-config.cmake.in
extra/: guitest.cpp  wstgui.cpp
include/wstgui/: anchor_layoutable.hpp  box_layoutable.hpp  button.hpp  component.hpp  controller_def.hpp  cut_layoutable.hpp  frame_hud.hpp  fwd.hpp  grid_component.hpp  group_component.hpp  gui_manager.hpp  ilayoutable.hpp  label.hpp  layout_builder.hpp  list_view.hpp  menu.hpp  menu_component.hpp  menu_item.hpp  rfloat.hpp  root_component.hpp  screen.hpp  screen_manager.hpp  slider.hpp  style.hpp  tab_component.hpp  text_view.hpp
src/: anchor_layoutable.cpp  box_layoutable.cpp  button.cpp  button.hpp  component.cpp  controller_def.hpp  cut_layoutable.cpp  frame_hud.cpp  grid_component.cpp  grid_component.hpp  group_component.cpp  group_component.hpp  gui_manager.cpp  ilayoutable.cpp  label.cpp  label.hpp  layout_builder.cpp  list_view.cpp  list_view.hpp  menu.cpp  menu.hpp  menu_component.cpp  menu_item.cpp  root_component.cpp  screen.cpp  screen_manager.cpp  slider.cpp  style.cpp  style.hpp  tab_component.cpp  text_view.cpp
